# poly-rs

./: Cargo.toml  README.md  docs-header.html
.github/workflows/: ci.yaml
src/: explicit.rs  lib.rs  poly.rs  power.rs  sequence.rs  traits.rs  variable.rs
